--- a/css/theme-blue.css
+++ b/css/theme-blue.css
@@ -14,15 +14,15 @@ h4 {color: #808080; }
 }
 
 .nav > li.active > a {
-    background-color: #347DBE;
+    background-color:  #0f3252; /* #347DBE; */
 }
 
 .nav > li > a:hover {
-    background-color: #248ec2;
+    background-color: #1e3952;  /* #248ec2; */
 }
 
 div.navbar-collapse .dropdown-menu > li > a:hover {
-    background-color: #347DBE;
+    background-color: #0f3252; /* #347DBE; */
 }
 
 .nav li.thirdlevel > a {
